add chassis argument so that chassis can be set when launching CA Policy."
Signed-off-by: wliu21 <wei.zhi.liu@intel.com>

--- a/sample/ca_policy/param/ca_policy_common.waterbot.yaml
+++ b/sample/ca_policy/param/ca_policy_common.waterbot.yaml
@@ -29,3 +29,6 @@ robot_base: waterbot
 
 #social object source
 social_object_source: /moving_object/social_object
+
+#default luminance fro LED belt.
+luminance: 128
